packages/monitoring/k8s-manifests/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    #external-dns.alpha.kubernetes.io/hostname: vnextadmin.local
    #cert-manager.io/issuer: letsencrypt-staging
spec:
  ingressClassName: nginx
  #tls:
  #   - hosts:
  #       - vnextadmin.local
  #     secretName: quickstart-example-tls
  rules:
    - host: prometheus.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
